Fixed z-index for popups.

--- a/databaseCourse/elements/pl-relax-element/relax-element.css
+++ b/databaseCourse/elements/pl-relax-element/relax-element.css
@@ -35,7 +35,7 @@
 	background-color: #f1f1f1;
 	min-width: 0px;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	z-index: 1;
+	z-index: 10;
 	height: 10px;
 }
 
@@ -332,7 +332,7 @@
 	border: #93bcff7a;
 	padding: .5%;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	z-index: 1;
+	z-index: 5;
 	border-radius: 5px;
 }
 
